--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                     <p>
                         Hi, Thanks for stopping by. I’m Von and my Digital Artistry has appeared all over the
                         Nation—Boradcasted, online and in print—from a Million dollar revenue company to a small family Bee farm in Kentucky. Filming, Video editing, Motion Graphics and DvD Authoring
-                        courses through my veins. And I could talk about Painting Pixels all day if given the opportunity. I believe everyone has a story tell, and an audience who wants to listen—my job is to
+                        courses through my veins. I could talk about Painting Pixels all day if given the opportunity. I believe everyone has a story to tell, and an audience who wants to listen — My job is to
                         bridge the gap between the two. When I’m not Filming, you won't be able to find me, (unless your willing to wake up early and come along!) I'm deep in the National Forest looking for 
-                        Morels or Ginseng or just enjoying the Landscape. When it rains heavy, I'm out in it. Sound like a match? Shoot me an email from the button down below
+                        Morels or Ginseng or just enjoying the Landscape. When it rains heavy, I'm out in it. Sound like a match? Shoot me an eMail from the button down below
                         to talk about how we can partner together.
 
                     </p>
