--- a/index.html
+++ b/index.html
@@ -73,12 +73,15 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hi, Thanks for stopping by. I’m Von and my Digital Artistry has appeared all over the
-                        Nation—Boradcasted, online and in print—from a Million dollar revenue company to a small family Bee farm in Kentucky. Filming, Video editing, Motion Graphics and DvD Authoring
-                        courses through my veins. I could talk about Painting Pixels all day if given the opportunity. I believe everyone has a story to tell and an audience who wants to listen— My job is to
-                        bridge the gap between the two. When I’m not Filming, you won't be able to find me, (unless your willing to wake up early and come along!) I'm deep in the National Forest looking for 
-                        Morels or Ginseng or just enjoying the Landscape. When it rains heavy, I'm out in it. Sound like a match? Shoot me an eMail from the button down below
-                        to talk about how we can partner together.
+                        Hi,
+
+Thanks for stopping by. I’m Von and my Digital Artistry has appeared all over the Nation—Boradcasted, online and in print—. Filming, Video editing, Motion Graphics and DvD Authoring courses through my veins. I could talk about Painting Pixels all day if given the opportunity.
+
+When I’m not Filming, I'm on Visual Studio writing code for a WPF Enterprise App with MVVM. This App helps me organize clients and the Video equipment on that site, here's the Link:
+
+https://github.com/MantaRaRa/NVROrganizer.git
+
+Sounds like a match? Shoot me an eMail from the button down below to talk about how we can partner together.
 
                     </p>
                 </div>
