--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                     <p>
                         Hi,
 
-Thanks for stopping by. I’m Von and my Digital Artistry has appeared all over the Nation—Boradcasted, online and in print—. Filming, Video editing, Motion Graphics and DvD Authoring courses through my veins. I could talk about Painting Pixels all day if given the opportunity.
+<br>Thanks for stopping by. I’m Von and my Digital Artistry has appeared all over the Nation—Boradcasted, online and in print—. Filming, Video editing, Motion Graphics and DvD Authoring courses through my veins. I could talk about Painting Pixels all day if given the opportunity.
 
-When I’m not Filming, I'm on Visual Studio writing code for a WPF Enterprise App with MVVM. This App helps me organize clients and the Video equipment on that site, here's the Link:
+<br>When I’m not Filming, I'm on Visual Studio writing code for a WPF Enterprise App with MVVM. This App helps me organize clients and the Video equipment on that site, here's the Link:
 
-https://github.com/MantaRaRa/NVROrganizer.git
+<br>https://github.com/MantaRaRa/NVROrganizer.git
 
-Sounds like a match? Shoot me an eMail from the button down below to talk about how we can partner together.
+<br>Sounds like a match? Shoot me an eMail from the button down below to talk about how we can partner together.
 
                     </p>
                 </div>
