--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 <br>When I’m not Filming, I'm on Visual Studio writing code for a WPF Enterprise App with MVVM. This App helps me organize clients and the Video equipment on that site, here's the Link:
 
-<br>https://github.com/MantaRaRa/NVROrganizer.git
+<br> <a href="https://github.com/MantaRaRa/NVROrganizer.git">NVR Organizer</a>
 
 <br>Sounds like a match? Shoot me an eMail from the button down below to talk about how we can partner together.
 
