--- a/index.html
+++ b/index.html
@@ -152,7 +152,13 @@
             <span class="education-date">January 2022 - Present</span>
             <h4>Softare Development</h4>
             <p>
-                Code KY...
+                Code KY.C# Part 1 Certified
+            </p>
+		<p>
+                Code KY.C# Part 2 Certified
+            </p>
+		<p>
+                Code KY.Phyton Part 1 Currently Enrolled
             </p>
         </div>
 
@@ -162,7 +168,7 @@
             <span class="education-date">January 2021 - Present</span>
             <h4>Softare Development</h4>
             <p>
-                During the Pandemic Unity Started to Offer Free Courses. I couldn't resist 
+                During the Pandemic Unity Started to Offer Free Courses. 
             </p>
         </div>
         <!-- End .education-block -->
@@ -260,6 +266,8 @@
         <div id="skills">
             <h2 class="heading">Skills</h2>
             <ul>
+		<li>C#</li>
+		<li>Phyton</li> 
                 <li>Affter Effects</li>
                 <li>Dreamweaver</li>
                 <li>Flash</li>
@@ -270,7 +278,6 @@
                 <li>Scenarist</li>
                 <li>Video Compression</li>
                 <li>Unity</li>
-                <li>C#</li>
                 <li>WonderShare</li>
                 <li>Resideo</li>
                 <li>Compass</li>
