--- a/index.html
+++ b/index.html
@@ -165,7 +165,11 @@
             </p>
 		<p>
 		University of Louisville
-		NSA CyberSecurity
+		 </p>	
+		<p>
+		NSA CyberSecurity Currently Enrolled
+		 </p>	
+		<p>		
                 Cybersecurity Workforce Certificate Program, funded by the NCAE-C. 
             </p>
         </div>
