--- a/index.html
+++ b/index.html
@@ -147,6 +147,16 @@
 
     <div id="education">
         <h2 class="heading">Education</h2>
+	    
+        <div class="education-block">
+            <h3>University of Louisville</h3>
+            <span class="education-date">October 2022 - Present</span>
+            <h4> NSA CyberSecurity </h4>
+            <p>
+                Cybersecurity Workforce Certificate Program, funded by the NCAE-C
+            </p>
+        </div>
+        <!-- End .education-block -->
         <div class="education-block">
             <h3>Code KY</h3>
             <span class="education-date">January 2022 - Present</span>
@@ -163,18 +173,7 @@
 		<p>
                 Code KY.Phyton Part 2 Currently Enrolled
             </p>
-		
-		 <h4>                </h4>
-		
-		<p>
-		University of Louisville
-		 </p>	
-			<p>
-               NSA CyberSecurity Currently Enrolled
-            </p>
-			<p>
-                Cybersecurity Workforce Certificate Program, funded by the NCAE-C.
-        </div>
+	
 
 
         <div class="education-block">
