--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
                 Code KY.Phyton Part 2 Currently Enrolled
             </p>
 	
-
+  </div>
+        <!-- End .education-block -->
 
         <div class="education-block">
             <h3>Unity Student Plan</h3>
