--- a/index.html
+++ b/index.html
@@ -139,6 +139,17 @@
                     More To Come
                 </p>
             </div>
+		
+		 <div data-date="January 2022 – Present">
+                <h3>Code Kentucky</h3>
+                <h4>Mentoring</h4>
+                <p>
+                    Helping Students learn basic concepts of C# programming and Version control. 
+                    Grading Summative Assessments after Courses
+
+                </p>
+            </div>
+
 
 
         </div>
@@ -169,10 +180,10 @@
                 Code KY.C# Part 2 Certified
             </p>
 		<p>
-                Code KY.Phyton Part 1 Certified
+                Code KY.Python Part 1 Certified
             </p>
 		<p>
-                Code KY.Phyton Part 2 Currently Enrolled
+                Code KY.Python Part 2 Currently Certified
             </p>
 	        </div>
         <!-- End .education-block -->
@@ -281,7 +292,7 @@
             <h2 class="heading">Skills</h2>
             <ul>
 		<li>C#</li>
-		<li>Phyton</li> 
+		<li>Python</li> 
                 <li>Affter Effects</li>
                 <li>Dreamweaver</li>
                 <li>Flash</li>
