--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <h3>Code Kentucky</h3>
                 <h4>Mentoring</h4>
                 <p>
-                    Helping Students learn basic concepts of C# programming and Version control. 
+                    Helping Students learn basic concepts of C# programming and Version control.<br>
                     Grading Summative Assessments after Courses
 
                 </p>
