--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 Code KY.Python Part 1 Certified
             </p>
 		<p>
-                Code KY.Python Part 2 Currently Certified
+                Code KY.Python Part 2 Certified
             </p>
 	        </div>
         <!-- End .education-block -->
