--- a/index.html
+++ b/index.html
@@ -98,52 +98,7 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="November 2010– May 2013">
-                <h3>Zendik Arts and Educational Foundation</h3>
-                <h4>Video Department Director </h4>
-                <p>
-                    More To Come
-                </p>
-            </div>
-
-            <div data-date=" May 2013 – September 2013">
-                <h3>Pocahontas County Jail</h3>
-                <h4>Law Enforcement Instructor</h4>
-                <p>
-                    More to Come
-            </div>
-
-            <div data-date="September 2013 – August 2014">
-                <h3>HSI Security</h3>
-                <h4>Data Entry, Installer</h4>
-                <p>
-                    More To Come
-                </p>
-            </div>
-
-            <div data-date="August 2014 – September 2017">
-                <h3>Shiver Security</h3>
-                <h4>Installer, Service Tech</h4>
-                <p>
-                    More To Come
-                </p>
-            </div>
-
-            <div data-date="September 2017 – Present">
-                <h3>Bates Security</h3>
-                <h4>Service Tech, Fire Inspector</h4>
-                <p>
-                    More To Come
-                </p>
-            </div>
-
-            <div data-date="January 2021 – Present">
-                <h3>ABCO Security</h3>
-                <h4>Service Tech, Fire Inspector</h4>
-                <p>
-                    More To Come
-                </p>
-            </div>
+         
 		
 		 <div data-date="January 2022 – Present">
                 <h3>Code Kentucky</h3>
@@ -155,6 +110,55 @@
                 </p>
             </div>
 
+
+            <div data-date="September 2017 – Present">
+                <h3>Bates Security</h3>
+                <h4>Service Tech, Fire Inspector</h4>
+                <p>
+                    More To Come
+                </p>
+            </div>
+
+
+            <div data-date="January 2021 – Present">
+                <h3>ABCO Security</h3>
+                <h4>Service Tech, Fire Inspector</h4>
+                <p>
+                    More To Come
+                </p>
+            </div>
+		
+		
+
+            <div data-date="August 2014 – September 2017">
+                <h3>Shiver Security</h3>
+                <h4>Installer, Service Tech</h4>
+                <p>
+                    More To Come
+                </p>
+            </div>
+
+
+           
+
+            <div data-date="September 2013 – August 2014">
+                <h3>HSI Security</h3>
+                <h4>Data Entry, Installer</h4>
+                <p>
+                    More To Come
+                </p>
+            </div>
+
+		<div data-date=" May 2013 – September 2013">
+                <h3>Pocahontas County Jail</h3>
+                <h4>Law Enforcement Instructor</h4>
+                <p>
+                    Women self-Defense 
+		<br>Stranger Danger Classes for 5-10 year olds
+            </div>
+
+
+		
 
 
         </div>
