--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 <br>Thanks for stopping by. I’m Von and my Digital Artistry has appeared all over the Nation—Boradcasted, online and in print—. Filming, Video editing, Motion Graphics and DvD Authoring courses through my veins. I could talk about Painting Pixels all day if given the opportunity.
 
-<br>When I’m not Filming, I'm on Visual Studio writing code for a WPF Enterprise App with MVVM. This App helps me organize clients and the Video equipment on that site, here's the Link:
+<br>When I’m not Filming, I'm on Visual Studio writing code, here's the Link to some of my Projects:
 
 
 <br> <a href="https://github.com/MantaRaRa/OLAP-Data-Warehouse">OLAP-Data-Warehouse</a>
