--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <h3>Code Kentucky</h3>
                 <h4>Mentoring</h4>
                 <p>
-                    Helping Students learn basic concepts of C# programming and Version control.<br>
+                    Helping Students learn basic concepts of C# programming and Version control<br>
                     Grading Summative Assessments after Courses
 
                 </p>
@@ -115,7 +115,8 @@
                 <h3>Bates Security</h3>
                 <h4>Service Tech, Fire Inspector</h4>
                 <p>
-                    More To Come
+                   Installing programs on integrated IT Networking, Fire, Access, Security, Camera and Elevator systems
+		<br>Inspecting and Updating IT Network, Fire, Access, Security, Camera and Elevator System Databases
                 </p>
             </div>
 
@@ -124,7 +125,8 @@
                 <h3>ABCO Security</h3>
                 <h4>Service Tech, Fire Inspector</h4>
                 <p>
-                    More To Come
+                    Installing programs on integrated Fire systems
+		<br>Inspecting and Updating Fire System Databases
                 </p>
             </div>
 		
@@ -134,7 +136,8 @@
                 <h3>Shiver Security</h3>
                 <h4>Installer, Service Tech</h4>
                 <p>
-                    More To Come
+                    Installing programs on integrated Security systems
+	        <br>Making changes to current Security system databases
                 </p>
             </div>
 
@@ -145,7 +148,8 @@
                 <h3>HSI Security</h3>
                 <h4>Data Entry, Installer</h4>
                 <p>
-                    More To Come
+                    Keeping accurate logs 
+	        <br>Making changes to databases
                 </p>
             </div>
 
@@ -197,15 +201,7 @@
 	        </div>
         <!-- End .education-block -->
  	</div>
-        <div class="education-block">
-            <h3>Unity Student Plan</h3>
-            <span class="education-date">January 2021 - Present</span>
-            <h4>Softare Development</h4>
-            <p>
-                During the Pandemic Unity Started to Offer Free Courses. 
-            </p>
-        </div>
-        <!-- End .education-block -->
+       
 
         <div class="education-block">
             <h3>Zendik Arts and Educational Foundation</h3>
