--- a/index.html
+++ b/index.html
@@ -99,19 +99,27 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
          
+	 <div data-date="July 2023 – Present">
+                <h3>Ledcor</h3>
+                <h4>LTS</h4>
+                <p>
+                    Fiber Optic Networks: Trace, locate, repair and configure appropriate telecommunications links and Firewalls (Meraki)
+
+                </p>
+            </div>
 		
 		 <div data-date="January 2022 – Present">
                 <h3>Code Kentucky</h3>
                 <h4>Mentoring</h4>
                 <p>
-                    Helping Students learn basic concepts of C# programming and Version control<br>
+                    Helping Students learn basic concepts of C#, Python programming and Version control<br>
                     Grading Summative Assessments after Courses
 
                 </p>
             </div>
 
 
-            <div data-date="September 2017 – Present">
+            <div data-date="September 2017 – July 2023">
                 <h3>Bates Security</h3>
                 <h4>Service Tech, Fire Inspector</h4>
                 <p>
@@ -121,7 +129,7 @@
             </div>
 
 
-            <div data-date="January 2021 – Present">
+            <div data-date="January 2021 – July 2023">
                 <h3>ABCO Security</h3>
                 <h4>Service Tech, Fire Inspector</h4>
                 <p>
