--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <h3>Ledcor</h3>
                 <h4>LTS</h4>
                 <p>
-                    Fiber Optic Networks: Trace, locate, repair and configure appropriate telecommunications links and Firewalls (Meraki)
+                    Fiber Optic Networks, NAAS, UCaaS: Trace, locate, repair and configure appropriate telecommunication links (Accedian, Cienenna, RAD, AdTran), Firewalls (Meraki, FortiGate), Satellite (VSAT, BGAN)
 
                 </p>
             </div>
